# HabitTracker

./: .doit.db.db  .flake8  .gitignore  MANIFEST.in  README.md  dodo.py  pyproject.toml  setup.cfg
docs/source/: conf.py  index.rst
habittracker/: __init__.py  __main__.py  calc_stats.py  gui.py  help_manual.txt
habittracker/data/months/: june2022.txt  may2022.txt
habittracker/data/plans/: June2022.txt  June2023.txt  March2022.txt  November2022.txt  November2024.txt  October2022.txt
habittracker/data/tracker/: August2022.txt  December2022.txt  February2022.txt  January1.txt  June2022.txt  June2023.txt  March2022.txt  May2022.txt  November2024.txt  October2022.txt  September2022.txt
habittracker/gui/: month.py  other_temporarily.py
habittracker/plans/months/: june2022.txt
habittracker/po/: gui.pot
habittracker/po/ru/LC_MESSAGES/: gui.mo  gui.po  gui.py.mo
test/: test_insert_input_plans.txt  test_insert_output_plans.txt  test_least_popular.py  test_most_popular.py  test_plans_adding.py  test_ticks_numbers.py  test_tracker_input.py  test_update_input_plans.txt  test_update_output_plans.txt
