[build-system]
requires = ["Sphinx", "doit", "build", "numpy", "wheel", "setuptools", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "habittracker"
version = "0.1"
dependencies = [
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["habittracker"]
namespaces = false

[tool.setuptools]
include-package-data = false

#[tool.setuptools.package-data]
#habittracker = ["*/*/*/*.mo"]

[tool.setuptools.exclude-package-data]
habittracker = ["*/*/*/*.po"]
